# Horrified-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Monsters/: Dracula.cpp  Dracula.hpp  Invisible_Man.cpp  Invisible_Man.hpp  Location.cpp  Location.hpp  Map.cpp  Map.hpp  Monster.cpp  Monster.hpp  MonsterCard.cpp  MonsterCard.hpp
include/: Archaeologist.hpp  Game.hpp  Hero.hpp  Item.hpp  ItemManager.hpp  Location.hpp  Mayor.hpp  PerkCard.hpp  Villager.hpp
include/app/: GameApp.hpp
include/audio/: AudioManager.hpp
include/core/: Archaeologist.hpp  Courier.hpp  Dracula.hpp  Game.hpp  GameException.hpp  Hero.hpp  Invisible_Man.hpp  Item.hpp  ItemManager.hpp  Location.hpp  Map.hpp  Mayor.hpp  Monster.hpp  MonsterCard.hpp  PerkCard.hpp  SceneDataHub.hpp  Scientist.hpp  Villager.hpp
include/graphics/: TextureManager.hpp
include/graphics/scenes/: AdvanceScene.hpp  BoardScene.hpp  ChestInfoScene.hpp  DefeatScene.hpp  EndGameScene.hpp  GuidScene.hpp  HelpScene.hpp  HeroSelectionScene.hpp  IntroScene.hpp  ItemSelectionScene.hpp  LoadGamesScene.hpp  LocationInfoScene.hpp  LocationSelectionScene.hpp  MainMenuScene.hpp  MonsterPhaseScene.hpp  MonsterSelectionScene.hpp  MonstersSummaryScene.hpp  MoveScene.hpp  PerkCardScene.hpp  PerkSelectionScene.hpp  PickUpScene.hpp  PlayerInfoScene.hpp  PlayerSummaryScene.hpp  RescueResultScene.hpp  Scene.hpp  SceneKeys.hpp  SceneManager.hpp  ShowActionsScene.hpp  SpecialScene.hpp  (+1 more)
include/saves/: SaveManager.hpp
src/: Archaeologist.cpp  Game.cpp  Hero.cpp  Invisible_Man.cpp  Item.cpp  ItemManager.cpp  Map.cpp  Mayor.cpp  MonsterCard.cpp  PerkCard.cpp  Villager.cpp  main.cpp
src/app/: GameApp.cpp
src/audio/: AudioManager.cpp
src/core/: Archaeologist.cpp  Courier.cpp  Dracula.cpp  Game.cpp  Hero.cpp  Invisible_Man.cpp  Item.cpp  ItemManager.cpp  Location.cpp  Map.cpp  Mayor.cpp  Monster.cpp  MonsterCard.cpp  PerkCard.cpp  SceneDataHub.cpp  Scientist.cpp  Villager.cpp
src/graphics/: TextureManager.cpp
src/saves/: SaveManager.cpp
(+37 files in other folders)
